tests/baselines/reference/importCallExpressionCheckReturntype1.errors.txt
1.ts(4,5): error TS2322: Type 'Promise<typeof import("defaultPath")>' is not assignable to type 'Promise<typeof import("anotherModule")>'.
  Property 'D' is missing in type 'typeof import("defaultPath")' but required in type 'typeof import("anotherModule")'.
1.ts(5,10): error TS2352: Conversion of type 'Promise<typeof import("defaultPath")>' to type 'Promise<typeof import("anotherModule")>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Property 'D' is missing in type 'typeof import("defaultPath")' but required in type 'typeof import("anotherModule")'.


==== anotherModule.ts (0 errors) ====
    export class D{}
    
==== defaultPath.ts (0 errors) ====
    export class C {}
    
==== 1.ts (2 errors) ====
    import * as defaultModule from "./defaultPath";
    import * as anotherModule from "./anotherModule";
    
    let p1: Promise<typeof anotherModule> = import("./defaultPath");
        ~~
!!! error TS2322: Type 'Promise<typeof import("defaultPath")>' is not assignable to type 'Promise<typeof import("anotherModule")>'.
!!! error TS2322:   Property 'D' is missing in type 'typeof import("defaultPath")' but required in type 'typeof import("anotherModule")'.
!!! related TS2728 anotherModule.ts:1:14: 'D' is declared here.
    let p2 = import("./defaultPath") as Promise<typeof anotherModule>;
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'Promise<typeof import("defaultPath")>' to type 'Promise<typeof import("anotherModule")>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Property 'D' is missing in type 'typeof import("defaultPath")' but required in type 'typeof import("anotherModule")'.
!!! related TS2728 anotherModule.ts:1:14: 'D' is declared here.
    let p3: Promise<any> = import("./defaultPath");
    